# goaldis

./: CMakeLists.txt  README.md  dumpall.bash
src/: disasm.cpp  goaldis.h  main.cpp
